--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,135 @@
-# Core modules (mandatory)
-jupyterlite-core==0.3.0
-jupyterlab~=4.1.6
-notebook~=7.1.2
-
-
-# Python kernel (optional)
-jupyterlite-pyodide-kernel==0.3.1
-
-# JavaScript kernel (optional)
-jupyterlite-javascript-kernel==0.3.0
-
-# Language support (optional)
-jupyterlab-language-pack-fr-FR
-jupyterlab-language-pack-zh-CN
-
-# P5 kernel (optional)
-jupyterlite-p5-kernel==0.1.0
-
-# JupyterLab: Fasta file renderer (optional)
-jupyterlab-fasta>=3.3.0,<4
-# JupyterLab: Geojson file renderer (optional)
-jupyterlab-geojson>=3.4.0,<4
-# JupyterLab: guided tour (optional)
-# TODO: re-enable after https://github.com/jupyterlab-contrib/jupyterlab-tour/issues/82
-# jupyterlab-tour
-# JupyterLab: dark theme
-jupyterlab-night
-# JupyterLab: Miami nights theme (optional)
-jupyterlab_miami_nights
-
-# Python: ipywidget library for Jupyter notebooks (optional)
-ipywidgets>=8.1.1,<9
-# Python: ipyevents library for Jupyter notebooks (optional)
-ipyevents>=2.0.1
-# Python: interative Matplotlib library for Jupyter notebooks (optional)
-ipympl>=0.8.2
-# Python: ipycanvas library for Jupyter notebooks (optional)
-ipycanvas>=0.9.1
-# Python: ipyleaflet library for Jupyter notebooks (optional)
-ipyleaflet
-
-# Python: plotting libraries (optional)
-plotly>=5,<6
-bqplot
+appnope==0.1.4
+asttokens==2.4.1
+attrs==23.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+bokeh==3.4.0
+Brotli==1.1.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+colorcet==3.1.0
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+Cython==0.29.37
+cytoolz==0.12.3
+dask==2024.4.1
+dask-expr==1.0.11
+datashader==0.16.0
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+distributed==2024.4.1
+docopt==0.6.2
+executing==2.0.1
+fastjsonschema==2.19.1
+fonttools==4.51.0
+fsspec==2024.3.1
+gensim==4.3.2
+hdbscan==0.8.33
+holoviews==1.18.3
+idna==3.6
+imageio==2.34.0
+importlib_metadata==7.1.0
+ipykernel==6.29.4
+ipython==8.12.3
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.4.0
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+kiwisolver==1.4.5
+lazy_loader==0.4
+linkify-it-py==2.0.3
+llvmlite==0.42.0
+locket==1.0.0
+lz4==4.3.3
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+matplotlib-inline==0.1.6
+mdit-py-plugins==0.4.0
+mdurl==0.1.2
+mistune==3.0.2
+msgpack==1.0.7
+multipledispatch==1.0.0
+nbclient==0.10.0
+nbconvert==7.16.3
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.3
+numba==0.59.1
+numpy==1.26.4
+packaging==24.0
+pandas==2.2.1
+pandocfilters==1.5.1
+panel==1.4.1
+param==2.1.0
+parso==0.8.4
+partd==1.4.1
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.3.0
+pip==24.0
+pipreqs==0.5.0
+platformdirs==4.2.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==15.0.2
+pyarrow-hotfix==0.6
+pyct==0.5.0
+Pygments==2.17.2
+pynndescent==0.5.12
+pyparsing==3.1.2
+PySocks==1.7.1
+python-dateutil==2.9.0
+pytz==2024.1
+pyviz_comms==3.0.2
+PyYAML==6.0.1
+pyzmq==25.1.2
+referencing==0.34.0
+requests==2.31.0
+rpds-py==0.18.0
+scikit-image==0.22.0
+scikit-learn==1.4.2
+scipy==1.12.0
+seaborn==0.13.2
+setuptools==69.2.0
+six==1.16.0
+smart_open==7.0.4
+sortedcontainers==2.4.0
+soupsieve==2.5
+stack-data==0.6.3
+tblib==3.0.0
+threadpoolctl==3.4.0
+tifffile==2024.2.12
+tinycss2==1.2.1
+toolz==0.12.1
+top2vec==1.0.34
+tornado==6.4
+tqdm==4.66.2
+traitlets==5.14.2
+typing_extensions==4.11.0
+tzdata==2024.1
+uc-micro-py==1.0.3
+umap-learn==0.5.6
+urllib3==2.2.1
+wcwidth==0.2.13
+webencodings==0.5.1
+wheel==0.43.0
+wordcloud==1.9.3
+wrapt==1.16.0
+xarray==2024.3.0
+xyzservices==2024.4.0
+yarg==0.1.9
+zict==3.0.0
+zipp==3.17.0
